--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "engines": {
         "node": ">=12.13.1"
     },
+    "husky": {
+  "hooks": {
+    "pre-commit": "pretty-quick --staged"
+  }
+},
     "scripts": {
         "tsn": "ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config",
         "tsnd": "ts-node-dev --transpileOnly --respawn --no-notify --no-deps -r tsconfig-paths/register -r source-map-support/register -r dotenv/config",
@@ -220,6 +225,7 @@
         "cypress": "^4.2.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-react": "^7.20.6",
+        "husky": "^4.2.5",
         "jest": "^26.4.2",
         "npm-run-all": "^4.1.5",
         "opener": "^1.5.1",
